<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvExpression"
            android:layout_width="match_parent"
            android:layout_height="80sp"
            android:ellipsize="start"
            android:gravity="end"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/tvRad"
            android:layout_width="0sp"
            android:layout_height="0sp" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:ellipsize="end"
            android:gravity="end"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textSize="50sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvClear"
                    style="@style/ActionButtonStyle"
                    android:text="@string/clear" />

                <TextView
                    android:id="@+id/tvOpen"
                    style="@style/ActionButtonStyle"
                    android:text="@string/open" />

                <TextView
                    android:id="@+id/tvClose"
                    style="@style/ActionButtonStyle"
                    android:text="@string/close" />

                <TextView
                    android:id="@+id/tvDivide"
                    style="@style/ActionButtonStyle"
                    android:text="@string/divide" />

                <TextView
                    android:id="@+id/tvInverse"
                    android:layout_width="0dp"
                    android:layout_height="0dp" />

                <TextView
                android:id="@+id/tvE"
                android:layout_width="0dp"
                android:layout_height="0dp" />

                <TextView
                    android:id="@+id/tvExp"
                    android:layout_width="0dp"
                    android:layout_height="0dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvSeven"
                    style="@style/NumberButtonStyle"
                    android:text="@string/_7" />

                <TextView
                    android:id="@+id/tvEight"
                    style="@style/NumberButtonStyle"
                    android:text="@string/_8" />

                <TextView
                    android:id="@+id/tvNine"
                    style="@style/NumberButtonStyle"
                    android:text="@string/_9" />

                <TextView
                    android:id="@+id/tvMul"
                    style="@style/ActionButtonStyle"
                    android:text="@string/mul" />

                <TextView
                    android:id="@+id/tvSqRoot"
                    android:layout_width="0dp"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/tvLog"
                    android:layout_width="0dp"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/tvLn"
                    android:layout_width="0dp"
                    android:layout_height="0dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tvFour"
                    style="@style/NumberButtonStyle"
                    android:text="@string/_4" />

                <TextView
                    android:id="@+id/tvFive"
                    style="@style/NumberButtonStyle"
                    android:text="@string/_5" />

                <TextView
                    android:id="@+id/tvSix"
                    style="@style/NumberButtonStyle"
                    android:text="@string/_6" />

                <TextView
                    android:id="@+id/tvMinus"
                    style="@style/ActionButtonStyle"
                    android:text="@string/minus" />

                <TextView
                    android:id="@+id/tvYRoot"
                    android:layout_width="0dp"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/tvSine"
                    android:layout_width="0dp"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/tvPi"
                    android:layout_width="0dp"
                    android:layout_height="0dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tvOne"
                    style="@style/NumberButtonStyle"
                    android:text="@string/_1" />

                <TextView
                    android:id="@+id/tvTwo"
                    style="@style/NumberButtonStyle"
                    android:text="@string/_2" />

                <TextView
                    android:id="@+id/tvThree"
                    style="@style/NumberButtonStyle"
                    android:text="@string/_3" />

                <TextView
                    android:id="@+id/tvPlus"
                    style="@style/ActionButtonStyle"
                    android:text="@string/plus" />

                <TextView
                    android:id="@+id/tvXSquared"
                    android:layout_width="0dp"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/tvCosine"
                    android:layout_width="0dp"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/tvTangent"
                    android:layout_width="0dp"
                    android:layout_height="0dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDot"
                    style="@style/NumberButtonStyle"
                    android:text="@string/dot" />

                <TextView
                    android:id="@+id/tvZero"
                    style="@style/NumberButtonStyle"
                    android:text="@string/zero" />

                <TextView
                    android:id="@+id/tvBack"
                    style="@style/NumberButtonStyle"
                    android:scaleType="center"
                    android:text="@string/back" />

                <TextView
                    android:id="@+id/tvEquals"
                    style="@style/ActionButtonStyle"
                    android:text="@string/equals" />

                <TextView
                    android:id="@+id/tvXToTheY"
                    android:layout_width="0dp"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/tvFac"
                    android:layout_width="0dp"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/tvDeg"
                    android:layout_width="0dp"
                    android:layout_height="0dp" />

            </LinearLayout>


         </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>